<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_Activity">


    <VideoView

        android:id="@+id/VideoView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/aisle"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="70dp"
        android:visibility="invisible"
        android:src="@drawable/aisledating"
        app:layout_constraintTop_toTopOf="@id/VideoView"
        app:layout_constraintStart_toStartOf="@id/VideoView"
        app:layout_constraintEnd_toEndOf="@id/VideoView"/>

    <TextView
        android:id="@+id/meet"
         android:layout_width="match_parent"
         android:layout_height="40dp"
        android:layout_marginTop="200dp"
        android:text="@string/meet_some_of_the_most"
        android:visibility="invisible"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/aisle"
        app:layout_constraintStart_toStartOf="@id/VideoView"
        app:layout_constraintEnd_toEndOf="@id/VideoView"/>

    <TextView
        android:id="@+id/desi"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/interesting_desis_around_you"
        android:visibility="invisible"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/meet"
        app:layout_constraintStart_toStartOf="@id/VideoView"
        app:layout_constraintEnd_toEndOf="@id/VideoView"/>



    <Button
        android:id="@+id/fb"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:text="@string/login_with_facebook"
        android:onClick="facebook"
        android:drawableStart="@drawable/ic_facebook"
        android:paddingStart="20dp"
        android:visibility="invisible"
        android:background="@drawable/rectangle_bg"
        android:paddingEnd="20dp"
        android:layout_marginTop="100dp"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/desi"
        app:layout_constraintStart_toStartOf="@id/VideoView"
        app:layout_constraintEnd_toEndOf="@id/VideoView"/>

    <TextView
        android:id="@+id/Phone"
        android:onClick="Phone"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="2dp"
        android:text="@string/continue_with_phone"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/fb"
        app:layout_constraintStart_toStartOf="@id/VideoView"
        app:layout_constraintEnd_toEndOf="@id/VideoView"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="45dp"
        android:visibility="invisible"
        android:textStyle="bold"
        android:text="@string/by_signing_in_you_agree_to_the_terms_privacy"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/Phone"
        app:layout_constraintStart_toStartOf="@id/VideoView"
        app:layout_constraintEnd_toEndOf="@id/VideoView"/>









</androidx.constraintlayout.widget.ConstraintLayout>